--- a/src/main/resources/templates/addenquiry.html
+++ b/src/main/resources/templates/addenquiry.html
@@ -17,7 +17,9 @@
 	href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" />
 <!-- MDB -->
 <link rel="stylesheet" href="css/mdb.min.css" />
-
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+	rel="stylesheet">
 </head>
 
 <body>
@@ -27,6 +29,12 @@
 			<a class="navbar-brand" href="#"> <img alt="ashokit"
 				src="images/logo.jpg" width=100%>
 			</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link" aria-current="page"
@@ -130,6 +138,8 @@
 
 	<!-- MDB -->
 	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- Custom scripts -->
 	<script type="text/javascript"></script>
 </body>
