--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,17 @@
 <body>
 	<div class="container-fluid">
 		<nav class="navbar navbar-expand-lg bg-body-light">
-			<div class="container-fluid">
+			<div class="container">
 				<a class="navbar-brand" href="#"> <img alt="ashokit"
 					src="images/logo.jpg" width=100%>
 				</a>
+				<button class="navbar-toggler" type="button"
+					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item"><a class="nav-link active"
@@ -26,74 +33,41 @@
 						<li class="nav-item"><a class="nav-link" href="#">Contact
 								us</a></li>
 					</ul>
-					<a href="/login" class="btn btn-danger">Login</a>
+					<div class="d-flex">
+						<a href="/login" class="btn btn-danger">Login</a>
+					</div>
 				</div>
 			</div>
 		</nav>
 	</div>
-<!-- 	<div class="container">
-		<div id="carouselExampleIndicators" class="carousel slide pt-5 pb-5">
-			<div class="carousel-indicators">
-				<button type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide-to="0" class="active" aria-current="true"
-					aria-label="Slide 1"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide-to="1" aria-label="Slide 2"></button>
-				<button type="button" data-bs-target="#carouselExampleIndicators"
-					data-bs-slide-to="2" aria-label="Slide 3"></button>
-			</div>
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="images/banner01.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="images/banner02.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="images/banner03.jpg" class="d-block w-100" alt="...">
-				</div>
-			</div>
-			<button class="carousel-control-prev" type="button"
-				data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
-			</button>
-			<button class="carousel-control-next" type="button"
-				data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
-			</button>
-		</div>
-	</div> -->
-		<div>
-			<h1 class="text-center">Trending Courses</h1>
-		</div>
-
-		<div class="row">
-			<div class="col-md-4">
-				<img src="images/aws.jpg" class="d-block w-100" alt="...">
-			</div>
-
-			<div class="col-md-4">
-				<img src="images/devops.jpg" class="d-block w-100" alt="...">
-			</div>
-
-			<div class="col-md-4">
-				<img src="images/sbms.jpg" class="d-block w-100" alt="...">
-			</div>
-		</div>
-		<!-- Footer -->
-		<footer class="page-footer font-small blue">
-
-			<!-- Copyright -->
-			<div class="footer-copyright text-center py-3">
-				© 2023 Copyright: <a href="/"> @Satya</a>
-			</div>
-			<!-- Copyright -->
-
-		</footer>
-		<!-- Footer -->
+	<div>
+		<h1 class="text-center">Trending Courses</h1>
 	</div>
+
+	<div class="row">
+		<div class="col-md-4">
+			<img src="images/aws.jpg" class="d-block w-100" alt="...">
+		</div>
+
+		<div class="col-md-4">
+			<img src="images/devops.jpg" class="d-block w-100" alt="...">
+		</div>
+
+		<div class="col-md-4">
+			<img src="images/sbms.jpg" class="d-block w-100" alt="...">
+		</div>
+	</div>
+	<!-- Footer -->
+	<footer class="page-footer font-small blue">
+
+		<!-- Copyright -->
+		<div class="footer-copyright text-center py-3">
+			© 2023 Copyright: <a href="/"> @Satya</a>
+		</div>
+		<!-- Copyright -->
+
+	</footer>
+	<!-- Footer -->
 
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
