--- a/src/main/resources/templates/viewenquiry.html
+++ b/src/main/resources/templates/viewenquiry.html
@@ -49,6 +49,12 @@
 			<a class="navbar-brand" href="#"> <img alt="ashokit"
 				src="images/logo.jpg" width=100%>
 			</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link" aria-current="page"
@@ -112,35 +118,37 @@
 
 
 
-									<div id="filteredEnq"></div>
-									<table id="enqList"
-										class="table table-striped table-bordered table-hover">
-										<thead>
-											<tr>
-												<th scope="col">#</th>
-												<th scope="col">Name</th>
-												<th scope="col">Course</th>
-												<th scope="col">Number</th>
-												<th scope="col">Enquiry Date</th>
-												<th scope="col">Status</th>
-												<th scope="col">Action</th>
-											</tr>
-										</thead>
-										<tbody>
-											<tr th:each="obj,stat : ${enqs}">
-												<th scope="row" th:text="${stat.index} + 1"></th>
-												<td th:text="${obj.studentName}"></td>
-												<td th:text="${obj.courseName}"></td>
-												<td th:text="${obj.phNo}"></td>
-												<td th:text="${obj.createdDate}"></td>
-												<td th:text="${obj.enquiryStatus}"></td>
-												<td><a th:href="@{'/enquiry/' + ${obj.enquiryId}}"
-													class="btn btn-sm btn-primary">Edit</a> <a
-													th:href="@{'/delete/' + ${obj.enquiryId}}"
-													class="btn btn-sm btn-danger">Delete</a></td>
-											</tr>
-										</tbody>
-									</table>
+									<div id="filteredEnq" class="table-responsive"></div>
+									<div class="table-responsive">
+										<table id="enqList"
+											class="table table-striped table-bordered table-hover">
+											<thead>
+												<tr>
+													<th scope="col">#</th>
+													<th scope="col">Name</th>
+													<th scope="col">Course</th>
+													<th scope="col">Number</th>
+													<th scope="col">Enquiry Date</th>
+													<th scope="col">Status</th>
+													<th scope="col">Action</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr th:each="obj,stat : ${enqs}">
+													<th scope="row" th:text="${stat.index} + 1"></th>
+													<td th:text="${obj.studentName}"></td>
+													<td th:text="${obj.courseName}"></td>
+													<td th:text="${obj.phNo}"></td>
+													<td th:text="${obj.createdDate}"></td>
+													<td th:text="${obj.enquiryStatus}"></td>
+													<td><a th:href="@{'/enquiry/' + ${obj.enquiryId}}"
+														class="btn btn-sm btn-primary">Edit</a> <a
+														th:href="@{'/delete/' + ${obj.enquiryId}}"
+														class="btn btn-sm btn-danger">Delete</a></td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 
 								</div>
 							</div>
@@ -154,6 +162,8 @@
 
 	<!-- MDB -->
 	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- Custom scripts -->
 	<script type="text/javascript"></script>
 </body>
